Estructurar con etiquetas semánticas y footer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fundamentos del Desarrollo web</h1>
-    <h2>Profesor: Carlos Azaustre</h2>
-    <ul>
-        
-    </ul>
+    <header>
+        <h1>Fundamentos del Desarrollo web</h1>
+        <h2>Profesor: Carlos Azaustre</h2>
+    </header>
+    <main>
+        <ol></ol>
+    </main>
+    <footer>
+        <p>&copy; Universidad Europea</p>
+    </footer>
 </body>
 </html>
